--- a/Pipfile
+++ b/Pipfile
@@ -5,11 +5,16 @@ verify_ssl = true
 
 [dev-packages]
 black = "*"
+flake8 = "*"
+flake8-mypy = "*"
+flake8-import-order = "*"
+flake8-bugbear = "*"
+pep8-naming = "*"
 pre-commit = "*"
+wily = "*"
 
 [packages]
 click = "*"
-wily = "*"
 
 [requires]
 python_version = "3.7"
