--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,9 +16,9 @@ repos:
         verbose: true
         args: [
           --line-length=88, 
-          --target-version=py37,
-          --exclude=/(\.git|\.venv)/
+          --target-version=py37
         ]
+        exclude: ^(\.git|\.venv|venv)/
         name: Reformat with black
 
   - repo: local
@@ -26,6 +26,13 @@ repos:
       - id: flake8
         name: Lint with flake8
         entry: flake8
+        additional_dependencies:
+          - flake8==3.7.7
+          - pep8-naming==0.8.2
+          - flake8-bugbear==19.3.0
+          - flake8-docstrings==1.3.0
+          - flake8-import-order==0.18.1
+          - flake8-mypy==17.8.0
         types: [python]
         language: python
 
